<resources>
    <string name="app_name">dbeintent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="robotoRegular">Roboto-Regular.ttf</string>
    <string name="title_activity_nextstep1">nextstep1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome To System</string>
    <string name="nav_header_subtitle">chavanganesh806@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_report">Daily Report</string>
    <string name="menu_user">User Profile</string>
    <string name="menu_task">New Task</string>
    <string name="dbtype_emp">Employee</string>
    <string name="dbtype_cli">Client</string>
    <string name="defaulter_name">Defaulter Name</string>

</resources>