<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_task"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_task" />
    </group>
</menu>